[package]
name = "orbit-code-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-mcp-server"
path = "src/main.rs"

[lib]
name = "orbit_code_mcp_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
orbit-code-arg0 = { workspace = true }
orbit-code-core = { workspace = true }
orbit-code-exec-server = { workspace = true }
orbit-code-features = { workspace = true }
orbit-code-protocol = { workspace = true }
orbit-code-shell-command = { workspace = true }
orbit-code-utils-cli = { workspace = true }
orbit-code-utils-json-to-toml = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
core_test_support = { workspace = true }
mcp_test_support = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
