load("//:defs.bzl", "orbit_code_rust_crate")

orbit_code_rust_crate(
    name = "skills",
    crate_name = "orbit_code_skills",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
